@startuml domain-model

title Domain Model - US1006b

hide empty members
'skinparam Linetype ortho

skinparam class {
    BackgroundColor<<valueObject>> #D6EAF8
    BackgroundColor<<root>> #FDEBD0
    BackgroundColor<<service>> #D1F2EB
    BackgroundColor #FEF9E7
    ArrowColor Black
}

skinparam package {
    BackgroundColor #EBF5FB
}

' Candidate Aggregate
package "<<aggregate>> Candidate" {
    entity Candidate <<entity>> <<root>> {}

    class FirstName <<valueObject>> <<(V, #FF8B40)>> {}
    class LastName <<valueObject>> <<(V, #FF8B40)>> {}
}

' Application Aggregate
package "<<aggregate>> Application" {
    entity Application <<entity>> <<root>> {}

    class ApplicationNumber <<valueObject>> <<(V, #FF8B40)>> {}

}

class PhoneNumber <<valueObject>> <<(V, #FF8B40)>> {}
class Email <<valueObject>> <<(V, #FF8B40)>> {}

' Candidate relationships
Candidate "1" --> "1" FirstName : has
Candidate "1" --> "1" LastName : has
Candidate "1" --> "1" PhoneNumber : has
Candidate "1" --> "1" Email : has

' Application relationships
Application "1" --> "1" ApplicationNumber : has
Application "1" --> "1" Candidate : from

@enduml